--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "author": "Softwire",
   "private": true,
   "scripts": {
-    "build": "npm run compile-js && npm run compile-sass",
-    "compile-js": "webpack",
+    "build": "npm run compile-js && npm run compile-react",
+    "compile-react": "webpack",
     "compile-sass": "node compile-sass.js"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
