--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,9 @@
-### Thymeleaf configuration
+# Common Configuration for all environments
 
-# TODO: dev vs. prod
-# Allow templates to be reloaded at dev time
-spring.thymeleaf.cache = false
+# Thymeleaf in HTML mode
 spring.thymeleaf.mode = html
 
-### DB configuration
-
-# Connection URL
-spring.datasource.url = jdbc:mysql://localhost:3306/cinemagic?useSSL=false
-
-# TODO: in dev use embedded H2? Or Sqlite 3.
-
-# Connection credentials
-spring.datasource.username = cinemagic
-spring.datasource.password = cinemagic
-
-### Hibernate configuration
-
-# Schema auto-configuration - can be validate/create/update/drop-create
-# Update will automatically update the schema to match the configured entities
-spring.jpa.hibernate.ddl-auto = validate
-
-# SQL dialect
+# MySQL dialect to provide consistency with production
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # 'Improved' Naming strategy which uses underscores
