--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,18 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- MySQL Connector -->
+        <!-- MySQL Connector for Production DB -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.45</version>
+        </dependency>
+
+        <!-- H2 Connector for Development DB -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
         </dependency>
 
         <!-- Guava -->
@@ -66,18 +73,6 @@
         </dependency>
 
         <!-- Test Dependencies -->
-        <!--<dependency>-->
-            <!--<groupId>org.junit.jupiter</groupId>-->
-            <!--<artifactId>junit-jupiter-api</artifactId>-->
-            <!--<version>5.1.0</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>io.github.bonigarcia</groupId>-->
-            <!--<artifactId>selenium-jupiter</artifactId>-->
-            <!--<version>2.0.0</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
