Add admin page, overhaul app
Commits squashed to avoid accidentally leaking bits of the model
solution

--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
   "scripts": {
     "build": "npm run compile-react && npm run compile-sass",
     "compile-react": "webpack",
-    "compile-sass": "node compile-sass.js"
+    "compile-sass": "node compile-sass.js",
+    "lint": "eslint src/main/javascript/**"
   },
   "dependencies": {
-    "moment": "^2.20.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "moment": "^2.22.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "node-sass": "^4.7.2",
     "webpack": "^3.11.0"
   }
