--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,7 +1,12 @@
+#
 # Development-specific Configuration
+#
 
 # Use H2 in MySQL mode
 spring.datasource.url = jdbc:h2:./target/dev-db.h2;MODE=MYSQL;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE;IGNORECASE=TRUE
 
-# Schema auto-configuration - automatically update the schema to match the configured entities
-spring.jpa.hibernate.ddl-auto = update
+# Set admin password
+cinemagic.admin.password=admin
+
+# Always include the stack trace in API responses
+server.error.include-stacktrace = always
