--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,7 +1,16 @@
-# MySQL database - url and credentials can be overriden
-spring.datasource.url = jdbc:mysql://localhost:3306/cinemagic?useSSL=false
-spring.datasource.username = cinemagic
-spring.datasource.password = cinemagic
+#
+# Production-specific Configuration
+#
 
-# Schema auto-configuration - validate that the schema matches entities
-spring.jpa.hibernate.ddl-auto = validate
+# MySQL database - url and credentials can be overridden
+spring.datasource.url = jdbc:mysql://localhost:3306/cinemagic?useSSL=false
+
+# Database username and password.  These need changing or overriding!
+spring.datasource.username = ChangeMe!
+spring.datasource.password = ChangeMe!
+
+# Admin password.  This needs changing or overriding!
+cinemagic.admin.password = ChangeMe!
+
+# Never include the stack trace in API responses - this could potentially leak information.
+server.error.include-stacktrace = never
