--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
+#
 # Common Configuration for all environments
+#
 
 # MySQL dialect to provide consistency with production
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # 'Improved' Naming strategy which uses underscores
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Use liquibase for DB migrations
+liquibase.change-log=classpath:liquibase-changelog.xml
+
+# Since we use liquibase for DB migrations, we only want hibernate to validate our schema, not create it.
+spring.jpa.hibernate.ddl-auto = validate
+
+# Username for admin API
+cinemagic.admin.username = admin
+
+# Do not perform validation when persisting to the database, only in the API layer.
+# See https://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#howto-configure-jpa-properties
+spring.jpa.properties.javax.persistence.validation.mode = none
