--- a/src/main/javascript/.eslintrc
+++ b/src/main/javascript/.eslintrc
@@ -14,11 +14,12 @@
   "rules": {
     "indent": "off",
     "linebreak-style": "off",
+    "no-nested-ternary": "off",
 
     "jsx-a11y/label-has-for": "id",
     "jsx-a11y/anchor-is-valid": "off",
     "react/prop-types": "off",
-    "react/no-array-index-key": "off"
+    "react/no-array-index-key": "off",
+    "react/prefer-stateless-function": [0]
   }
 }
-
